First Inital commit

--- a/wp-content/themes/di-ecommerce-child/assets/css/fonts.css
+++ b/wp-content/themes/di-ecommerce-child/assets/css/fonts.css
@@ -83,3 +83,12 @@
     font-style: normal;
 
 }
+
+@font-face {
+    font-family: 'ralewaybold';
+    src: url('../fonts/raleway-bold-webfont.woff2') format('woff2'),
+         url('../fonts/raleway-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
